<resources>
    <string name="app_name">HumorsDataCollection</string>
    <string name="connect_to_humors">Connect To Humors</string>
    <string name="start_testing">Take Reading</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_patient_email">Enter  Email</string>
    <string name="enter_patient_name">Enter  Name</string>
    <string name="weight">Weight</string>
    <string name="add_patient_data">Add patient data before preceding test</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="kgs">Kgs</string>
    <string name="age">Age</string>
    <string name="consume_alcohol">Do you Consume Alcohol ?</string>
    <string name="excr">Do you Exercise ?</string>
    <string name="smoking">Do you Smoke ?</string>
    <string name="todo">TODO</string>
    <string name="take_a_deep_breath">Take a deep breath and \n blow into the device (after beep sound)</string>
    <string name="blow_now">Blow Now</string>
    <string name="generating_results">Generating your result</string>
    <string name="hrs">Hrs</string>
    <string name="sleeping_hrs">"Sleeping Hours ?</string>
    <string name="water">Daily Average Water Consumption</string>
    <string name="food">Took meal in last one hour ?</string>
    <string name="respiratory_illuness_and_diseases">Respiratory Illuness and Diseases</string>
    <string name="diabetes">Diabetes Issue</string>
    <string name="heart_diseases">Thyroid Issue</string>
    <string name="liver_diseases">Liver Issue</string>
    <string name="appendix_diseases">PCOS Issue </string>
    <string name="lungs_diseases">Lungs Issue</string>
    <string name="other">Other Issue</string>
    <string name="none">None</string>
    <string name="past_medical_history">Disease History</string>
    <string name="start_test">Start Test</string>
    <string name="processing">Processing</string>
    <string name="it_will_take_time_don_t_close_app">it will take time, don\'t close app</string>
    <string name="name">Name:</string>
    <string name="test_result">Test Result</string>
    <string name="gender">Select Gender</string>
    <string name="hieght">Height</string>
    <string name="smoking_">Smoking</string>
    <string name="alcohol_">Alcohol</string>
    <string name="water_without">With water/without</string>
    <string name="food_without">With food/without</string>
    <string name="sleeping_hrs_">Sleeping hours</string>
    <string name="past">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda commodi consequuntur molestias necessitatibus, obcaecati quas quod ratione soluta voluptatibus!</string>
    <string name="past_medical_history_">Past medical history</string>
    <string name="test_result_as">Test result as follows</string>
    <string name="patient_details">Patient details</string>
    <string name="Acetone">Acetone</string>
    <string name="Ethanol">Ethanol</string>
    <string name="Benzene">Benzene</string>
    <string name="Methane">Methane</string>
    <string name="carbon_monoxide">Carbon Monoxide</string>
    <string name="H2">H2</string>
    <string name="Butane">Butane</string>
    <string name="H2S">H2S</string>
    <string name="Toluene">Toluene</string>
    <string name="Ammonia">Ammonia</string>
    <string name="take_test_again">Take reading again</string>
    <string name="_24">24</string>
    <string name="result_as_follows">Result as follows</string>
    <string name="humors">Humors</string>
    <string name="connect_to_humors1">Connect to humors</string>
    <string name="take_reading">Take reading</string>
    <string name="test_history">Test history</string>
    <string name="logout">Logout</string>
    <string name="consume_med">Did you consume any medicine in last 15 days?</string>
    <string name="kidney">Kidney Issue</string>
    <string name="dig">Digestion Issue</string>
    <string name="bad">Bad Smell From Mouthe Issue</string>
    <string name="Ltr">Ltr</string>
    <string name="humors_data_collection">Humors</string>
    <string name="test_logs">Test History</string>
    <string name="exit">Logout</string>
    <string name="select_device_you_wants_to_connected">Select device you wants to connect</string>
    <string name="humors_1">HUMORS 01</string>
    <string name="humors_4">Humors 4</string>
    <string name="humors_3">Humors 03</string>
    <string name="humors_2">Humors 2</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="submit_data">Submit Data</string>
    <string name="sumbit_data">Sumbit Data</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="regularly">Regularly</string>
    <string name="occasionally">Occasionally</string>
    <string name="never">Never</string>
    <string name="enter_medicine_description">Enter medicine description</string>
    <string name="enter_disease_in_description">Enter disease description</string>
    <string name="moderate_workout_2_3_times_a_week">Moderate Workout (2-3 times a week)</string>
    <string name="regular_workout_5_7_times_a_week">Regular Workout (5-7 times a week)</string>
    <string name="did_you_consume_water_or_food_in_last_hour">
        Did you Consume Food or Water before Test ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lets_start">Lets start</string>
    <string name="clear">Clear</string>
    <string name="save">save</string>
    <string name="send">send</string>
    <string name="save_as_excell">Save as excel</string>
    <string name="move_to_dashboard">Move to dashboard</string>
    <string name="sucessfully_result_generated">Successfully result generated</string>
    <string name="search">Download File</string>
    <string name="data">Select Date</string>
    <string name="download_excel">Download Excel</string>
    <string name="my_devices">My Devices</string>
    <string name="your_result">please wait while (do not close the app)</string>
    <string name="not_blown_properly">Not blown properly</string>
    <string name="take_reading_again">Take reading again</string>
    <string name="data_saved_successfully">Data Saved Successfully</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="try_again">Try again</string>
    <string name="humors_02">Humors 02</string>
</resources>