<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F2"
    android:layout_height="match_parent"
    tools:context=".Connect">

    <include
        android:layout_width="match_parent"
        android:layout_height="60dp"
        layout="@layout/main_toolbar1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"

        android:layout_height="100dp">
        <Button
            android:id="@+id/d1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:background="#398AD5"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:text="@string/humors_1"/>

        <Button
            android:id="@+id/d2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:background="#398AD5"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:text="@string/humors_3"/>

        <Button
            android:id="@+id/d3"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:background="#398AD5"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:text="@string/humors_02"/>


    </LinearLayout>




</LinearLayout>